feat: scholarship